--- a/database/config.json
+++ b/database/config.json
@@ -1,1 +1,1 @@
-{"db_name": "ilshat_db", "host": "localhost", "user": "ilshat_user", "password": "asakura2150", "port": "5432"}
+{"db_name": "postgres", "host": "127.0.0.1", "user": "postgres", "password": "asakura2150", "port": "5432", "db_schema": "public"}
